chore: fix layout problems and finalizing the page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1345,7 +1345,8 @@ h3,
     box-shadow 0.3s ease;
 }
 
-.cta-button:hover {
+.cta-button:hover,
+.saibaMais:hover {
   transform: translateY(-2px);
 
   box-shadow:
@@ -1372,7 +1373,8 @@ h3,
   }
 }
 .infoExtra span {
-  min-width: 350px;
+  max-width: 350px;
+  width: 100%;
   color: var(--roxo-metalico-principal);
   background: linear-gradient(135deg, #4b1fb8, #7f3dff, #9b6cff);
   -webkit-background-clip: text;
@@ -1408,4 +1410,20 @@ h3,
   background-clip: text;
   font-size: 3rem;
   font-weight: 700;
+}
+.saibaMais {
+  padding: 14px 24px;
+  border-radius: 20px;
+  max-width: fit-content;
+  box-shadow:
+    0 0 25px rgba(127, 61, 255, 0.6),
+    0 0 60px rgba(127, 61, 255, 0.3);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  text-decoration: none;
+  color: var(--roxo-brilho-neon);
 }
